<resources>
    <string name="app_name">StartupApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="registration_form">Register Your Details</string>
    <string name="name">Name :</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age :</string>
    <string-array name="age_group">
        <item>&lt;20</item>
        <item>20-30</item>
        <item>30-40</item>
        <item>&gt;40</item>
    </string-array>
    <string name="submit">Submit</string>
</resources>
